--- a/android-submodule-aar-ci.yml
+++ b/android-submodule-aar-ci.yml
@@ -29,9 +29,8 @@ lint:
   stage: lint
   script:
     - cd /root/android-app
-    - git checkout develop
-    - git branch -d master
-    - git checkout master
+    - git fetch origin
+    - git reset --hard origin/master
     - git checkout $CI_MERGE_REQUEST_TARGET_BRANCH_NAME; git pull
     - git submodule update --init --remote $CI_MODULE_PATH
     - git submodule update --init --remote aar-center
