--- a/android-submodule-aar-ci.yml
+++ b/android-submodule-aar-ci.yml
@@ -31,6 +31,7 @@ lint:
     - cd /root/android-app
     - git fetch origin
     - git reset --hard origin/master
+    - git submodule foreach --recursive git reset --hard origin/master
     - git checkout $CI_MERGE_REQUEST_TARGET_BRANCH_NAME; git pull
     - git submodule update --init --remote $CI_MODULE_PATH
     - git submodule update --init --remote aar-center
