--- a/android-submodule-aar-ci.yml
+++ b/android-submodule-aar-ci.yml
@@ -36,7 +36,7 @@ lint:
     - git submodule update --init --remote $CI_MODULE_PATH
     - git submodule update --init --remote aar-center
     - cd aar-center
-    - git checkout $CI_MERGE_REQUEST_TARGET_BRANCH_NAME; git pull
+    - git checkout -f $CI_MERGE_REQUEST_TARGET_BRANCH_NAME; git pull
     - cd /root/android-app
     - |
       cat <<EOF>> local.properties
